--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="font-size: 7rem;">Hello World!</h1>
+    <h1 style="font-size: 7rem;">Bye World!</h1>
 </body>
 </html>
